use -XX:+UseG1GC flag